[gd_scene load_steps=4 format=3 uid="uid://cx5e357w77x2j"]

[ext_resource type="Script" uid="uid://6f1owy01gb68" path="res://Scenes/Player/Projectiles/projectile.gd" id="1_ha4hg"]
[ext_resource type="SpriteFrames" uid="uid://cq7jepc0b2i73" path="res://Scenes/Enemies/Projectiles/projectile_enemy.tres" id="2_36sb2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_qxr3m"]
radius = 5.0

[node name="ProjectileEnemy" type="Area2D" node_paths=PackedStringArray("sprite")]
collision_layer = 16
collision_mask = 10
script = ExtResource("1_ha4hg")
speed = 150.0
damage = 1
direction = Vector2(0, 1)
sprite = NodePath("Sprite")
sprite_frames = ExtResource("2_36sb2")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_qxr3m")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_screen_exited"]
